Updated Skip for now feature

--- a/music/templates/music/login.html
+++ b/music/templates/music/login.html
@@ -45,6 +45,7 @@
   <div class="wrapper">
     <header class="header">
       <figure class="logo"><a href="{% url 'home' %}"><img src="{% static 'img/logo12.png' %}" alt="Logo"></figure></a>
+      <li style="position:absolute;right:20px;top:10px"><a href="home/">Skip for Now</a></li>
       <!-- 41*224 -->
       <nav class="menu">
 
